src/test/deca/syntax/valid/sansObjet/6_list_expr.deca
/*
	Test => (Inst) List expr valide

	Résultat=> syntaxe valid

	Date=>	17/1/2020
*/

{
	i <= 32  && 12 >= 32 + 23 <= 32  && 12 >= 32 - 23 == 32  || 12 != 32;
	23 <= 32  && 12 >= 32 * 23 <= 32  && 12 >= 32 - 23 == 32  / 12 != 32 ;
	23 <= 32  && 12 >= 32 % 23 <= 32  && 12 >= 32 - 23 == 32  / 12 != 32 ;
}
